fix: resolve layout squishing, dark mode colors, remove X link, square profile image

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -63,6 +63,9 @@
 
   img {
     width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 1/1;
   }
 }
 
